<resources>
    <string name="plugin_name">Better Wifi on/off</string>
    <string name="app_name">Better Wifi on/off</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_release_notes">Release Notes</string>
    <string name="layout_main_author">By asksven</string>
    <string name="layout_main_disable">Disabled</string>
    <string name="layout_main_wifilock">Hold Wifilock</string>
    <string name="layout_main_high_perf_wifilock">Hold high perf Wifilock</string>
    <string name="dialog_apps">Other Apps</string>
    <string name="dialog_dismiss">Dismiss</string>
    <string name="dialog_follow_me">Follow me</string>
    <string name="twitter_link">https://twitter.com/#!/asksven</string>
    <string name="market_link">market://search?q=com.asksven</string>
    <string name="status_connection_changed">Connection status changed</string>
    <string name="status_service_not_started">Service not started yet</string>
    <string name="status_notification_on">Notification activated</string>
    <string name="full_version_available">Add-free donate version available</string>
    <string name="status_service_running">Service running</string>
    <string name="pref_category_logging">Logging</string>
    <string name="pref_screen_logging">Logging Preferences</string>
    <string name="pref_start_on_boot_summary">Start the service on boot (if disabled start when app is first started)</string>
    <string name="pref_start_on_boot_title">Start on boot</string>
    <string name="pref_category_notification">Notifications</string>
    <string name="pref_category_service_settings">Service Settings</string>
    <string name="wifi_off_when_power_ununplug_title">Off when unplugged</string>
    <string name="wifi_off_when_power_ununplug_summary">Turn Wifi off when unplugged from charger</string>
    <string name="wifi_off_when_screen_off_title">Off when screen off</string>
    <string name="wifi_off_when_screen_off_summary">Turn Wifi off when screen goes off</string>
    <string name="wifi_on_when_screen_on_summary">Turn Wifi on when screen is turned on (recommended only if \"On when Screen unlocked\"" does not work)</string>
    <string name="wifi_on_when_screen_on_title">On when screen on</string>
    <string name="wifi_on_when_screen_unlock_summary">Turn on when screen unlocked (avoid turning Wifi on when screen goes on due to notifications)</string>
    <string name="wifi_on_when_screen_unlock_title">On when screen unlocked</string>
    <string name="pref_wifi_off_delay_title">Delay</string>
    <string name="pref_wifi_off_delay_summary">Time to wait before checking Wifi status</string>
    <string name="pref_category_rules_on">Rules for turning Wifi on</string>
    <string name="pref_category_rules_leave_on_when_screen_on">Rules for leaving Wifi on when screen is on</string>
    <string name="pref_category_rules_leave_on_when_screen_off">Rules for leaving Wifi on when screen is off</string>
    <string name="pref_category_rules_plugged">Rules when plugged</string>
    <string name="pref_category_rules_off">Rules for turning Wifi off</string>
    <string name="pref_wifi_on_when_power_plug_title">On when plugged in</string>
    <string name="pref_wifi_on_when_power_plug_summary">Turn Wifi on when power is plugged in</string>
    <string name="pref_wifi_on_if_connected_summary">Leave Wifi on only if a connection could be established (has a non zero IP address)</string>
    <string name="pref_wifi_on_if_connected_title">Only if connected</string>
    <string name="pref_check_for_cage_title">If connected check for cage</string>
    <string name="pref_check_for_cage_summary">Try to access Google DNS to make sure we are not trapped behind a hotspot requiring authentication</string>
    <string name="menu_clear_events">Clear Event Log</string>
    <string name="menu_refresh_events">Refresh Event Log</string>
    <string name="pref_category_events">On-Screen Event Logging</string>
    <string name="pref_events_show_user_summary">Show User Interactions</string>
    <string name="pref_events_show_user_title">User</string>
    <string name="pref_events_show_system_summary">Show System Events</string>
    <string name="pref_events_show_system_title">System</string>
    <string name="pref_events_show_status_summary">Show Status Changes</string>
    <string name="pref_events_show_status_title">Status</string>
    <string name="pref_wifi_on_when_screen_off_but_power_plugged_summary">Leave Wifi on when screen goes off but the phone is plugged</string>
    <string name="pref_wifi_on_when_screen_off_but_power_plugged_title">If plugged in</string>
    <string name="pref_disable_control_summary">Disable all processing</string>
    <string name="pref_disable_control_title">Disable</string>
    <string name="pref_foreground_service_summary">Avoid the service to be killed by Android</string>
    <string name="pref_foreground_service_title">Run as foreground service</string>
    <string name="pref_wakelock_while_power_plugged_title">Wakelock while plugged in</string>
    <string name="pref_wakelock_while_power_plugged_summary">Caution! Hold a wakelock while plugged in. Makes sense only for devices sleeping while charging and only if needed.</string>
    <string name="pref_wifilock_while_power_plugged_title">Wifilock while plugged in</string>
    <string name="pref_wifilock_while_power_plugged_summary">Hold a wifilock while plugged in. Radio will not sleep.</string>
    <string name="pref_wifilock_high_perf_while_power_plugged_title">High Perf. Wifilock while plugged in</string>
    <string name="pref_wifilock_high_perf_while_power_plugged_summary">Hold a high performance Wifilock . Radio will not sleep.</string>
    <string name="pref_wifi_on_when_screen_off_but_wifilock_title">Leave on if Wifilock</string>
    <string name="pref_wifi_on_when_screen_off_but_wifilock_summary">Respect Wifilocks and do not turn off screen straight away (schedules regular alarms)</string>
    <string name="pref_wifilock_title">Hold a Wifilock</string>
    <string name="pref_wifilock_summary">Caution! Holds a wifilock, device will not sleep till Wifi is turned off</string>
    <string name="pref_wifi_whitelist_title">SSID Whitelist</string>
    <string name="pref_wifi_whitelist_summary">Comma separated list of whitelisted SSIDs</string>
    <string name="pref_wifi_whitelist_summary_v11">List of whitelisted SSIDs</string>
    <string name="pref_wifi_on_if_whitelisted_summary">Stay on if current SSID is in whitelist</string>
    <string name="pref_wifi_on_if_whitelisted_title">If connected to whitelisted SSID</string>
    <string name="pref_wifi_on_if_in_call_title">If in Call</string>
    <string name="pref_wifi_on_if_in_call_summary">Leave Wifi on if screen goes off while a call is ongoing</string>
    <string name="pref_wifi_on_if_activity_title">If network activity</string>
    <string name="pref_wifi_on_if_activity_summary">Leave on as long as there is network activity (more than 1KB/s)</string>
    <string name="pref_wifi_on_if_wakelock_title">If wakelock is held</string>
    <string name="pref_wifi_on_if_wakelock_summary">Leave on as long as a wakelock is held (requires root)</string>
    <string name="support_version">Support the dev Version</string>
    <string name="free_version">Free Version</string>
    <string name="event_no_wifi_connection">No Wifi connection could be established. Turning off Wifi</string>
    <string name="event_access_point_not_wl">Access point %s is not whitelisted</string>
    <string name="event_access_point_wl">Access point %s is whitelisted: leaving Wifi on</string>
    <string name="event_app_wl">Runnung app is whitelisted (%s): leaving Wifi on</string>
    <string name="event_app_not_wl">No whitelisted app runnung app: turning Wifi off</string>
    <string name="event_connection_active">Connection active: leaving Wifi on</string>
    <string name="event_access_point_caged">Access point is caged: turning Wifi off</string>
    <string name="event_access_point_not_caged">Access point is not caged: leaving Wifi on</string>
    <string name="event_alarm">Alarm received: preparing to turn Wifi off</string>
    <string name="event_in_call">Phone is ringing or in a phone call, leave wifi on</string>
    <string name="event_network_active">Network activity detected, leaving wifi on</string>
    <string name="event_network_inactive">No network activity detected, turning wifi off</string>
    <string name="event_tethering_active">Tethering detected: leaving Wifi on</string>
    <string name="event_tethering_inactive">No tethering detected</string>
    <string name="event_disabled">Disabled: do nothing</string>
    <string name="event_scheduling_wifi_off_in">Scheduling Wifi to be turned off in %1$d seconds</string>
    <string name="event_scheduling_wifi_off_now">Turning off Wifi immediately</string>
    <string name="event_wifi_on">Turning Wifi on</string>
    <string name="event_wifi_already_on">Wifi is already on: nothing to do</string>
    <string name="event_screen_off">Screen was turned off</string>
    <string name="event_screen_on">Screen was turned on</string>
    <string name="event_screen_unlocked">Screen was unlocked</string>
    <string name="event_leave_on_charing">Leaving Wifi on because charger is connected</string>
    <string name="event_leave_on_connected">Leaving Wifi on because a connection is active</string>
    <string name="event_wakelock_detected">Wakelock detected: postponing Wifi off</string>
    <string name="event_no_wakelock_detected">No wakelock detected</string>
    <string name="event_stop_retrying">Retried %1$d times. Stop obsessing</string>
    <string name="menu_logcat">Save debugging log</string>
    <string name="pref_expert_mode_title">Expert mode</string>
    <string name="pref_expert_mode_summary">Enables additional preferences (use if you know what you are doing)</string>
    <string name="dialog_expert_mode">Switching to expert mode requires you to reopen the preferences dialog</string>
    <string name="dialog_simple_mode">Switching to simple mode requires you to reopen the preferences dialog</string>
    <string name="event_airplane_mode">Airplane Mode on: do nothing</string>
    <string name="pref_disregard_airplane_mode_title">Disregard airplane mode</string>
    <string name="pref_disregard_airplane_mode_summary">Turn Wifi on/off even if airplaine mode is on</string>
    <string name="event_wifi_off">Turning Wifi off</string>
    <string name="message_hint_set_status">Enable / disable</string>
    <string name="pref_disable_on_user_off_title">Disable when user turns Wifi off</string>
    <string name="pref_disable_on_user_off_summary">Disable Wifi handling if user decides to turn Wifi off</string>
    <string name="event_disable_by_widget">Processing disabled from widget</string>
    <string name="event_enable_by_widget">Processing enabled from widget</string>
    <string name="event_disable_due_to_user_interaction">Processing disabled: user turned Wifi off</string>
    <string name="pref_enable_on_user_on_title">Enable when user turns Wifi on</string>
    <string name="pref_enable_on_user_on_summary">Enable Wifi handling if user decides to turn Wifi on</string>
    <string name="event_enable_due_to_user_interaction">Processing enabled: user turned Wifi on</string>
    <string name="pref_connect_to_strongest_ap_title">Connect to strongest AP</string>
    <string name="pref_connect_to_strongest_ap_summary">Connects to the strongest configured AP (respects the whitelist)</string>
    <string name="app_pname">com.asksven.betterwifionoff</string>
    <string name="label_button_remind">Remind me later</string>
    <string name="label_button_rate">Rate</string>
    <string name="label_button_no">No, thanks</string>
    <string name="text_dialog_rate">If you enjoy using %s, please take a moment to rate it. Thanks for your support!</string>
    <string name="label_theme_dark">Dark</string>
</resources>